src/objects/asb_Log__c.object
<CustomObject>
    <description>Logs to capture information to assist with debugging if needed.</description>
    <fields>
        <fullName>Category__c</fullName>
        <description>The category of the logged event.</description>
        <inlineHelpText>The category of the logged event.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Search</fullName>
                </value>
                <value>
                    <fullName>DML</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <description>The data captured in the logged event.</description>
        <inlineHelpText>The data captured in the logged event.</inlineHelpText>
        <label>Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <description>Details of the exception thrown in the logged event.</description>
        <inlineHelpText>Details of the exception thrown in the logged event.</inlineHelpText>
        <label>Exception</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>Severity of the logged event.</description>
        <inlineHelpText>Severity of the logged event.</inlineHelpText>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StackTraceId__c</fullName>
        <description>A unique ID for the particular type of error. Can be used to track how often the error occurs.</description>
        <inlineHelpText>A unique ID for the particular type of error. Can be used to track how often the error occurs.</inlineHelpText>
        <label>Stack Trace ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Exception__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L-{0}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>